<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ctadmin.myapplication.MainActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="325dp"
        app:srcCompat="@drawable/vjrasana"
        android:scaleType="fitXY"
        android:id="@+id/Imageview1"
        android:contentDescription="@drawable/vjrasana" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/radiogroup"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/pranayama"
            android:id="@+id/pranayama"
        android:layout_height="match_parent" />

        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/vjrasana"
            android:id="@+id/vjrasana"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/pavamuktasana"
            android:id="@+id/pavamuktasana"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/paschimottanasana"
            android:id="@+id/paschimottanasana"
            android:layout_height="match_parent" />
    </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:srcCompat="@drawable/pranayama"
            android:scaleType="fitXY"
            android:id="@+id/Imageview2"
            android:contentDescription="@drawable/pranayama" />

        <CheckBox
            android:layout_width="match_parent"
            android:text="@string/pranayama"
            android:id="@+id/checkbox1"
            android:layout_height="wrap_content" />
        <CheckBox
            android:layout_width="match_parent"
            android:text="@string/vjrasana"
            android:id="@+id/checkbox2"
            android:layout_height="wrap_content" />
        <CheckBox
            android:layout_width="match_parent"
            android:text="@string/pavamuktasana"
            android:id="@+id/checkbox3"
            android:layout_height="wrap_content" />
        <CheckBox
            android:layout_width="match_parent"
            android:text="@string/paschimottanasana"
            android:id="@+id/checkbox4"
            android:layout_height="wrap_content" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:srcCompat="@drawable/pavanmuktasana"
        android:scaleType="fitXY"
        android:id="@+id/Imageview3"
        android:contentDescription="@+id/Imageview3" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/edittextsample"
        android:hint="@string/enter_the_answer"
        android:padding="10dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizSCORE" />

</LinearLayout>
</ScrollView>